use correct names

--- a/allEmployees.html
+++ b/allEmployees.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div>
-        <label for="aname">name:</label><br>
-        <input type="text" id="aname" name="aname"><br></input>
-        <label for="aemail">email:</label><br>
-        <input type="text" id="aemail" name="aemail"><br></input>
+        <label for="a_name">name:</label><br>
+        <input type="text" id="a_name" name="a_name"><br>
+        <label for="a_email">email:</label><br>
+        <input type="text" id="a_email" name="a_email"><br>
 
 
         <button id="submitButton" type="submit" return false;>create employee</button>
