--- a/allEmployees.html
+++ b/allEmployees.html
@@ -21,7 +21,7 @@
     </div>
 
     <a class="button" href="app.html">home</a>
-    <script type="text/javascript" src="Employee.js"></script>
+    <script type="module" src="Employee.js"></script>
 
 </body>
 </html>
