--- a/allEmployees.html
+++ b/allEmployees.html
@@ -8,11 +8,7 @@
 </head>
 <body>
     <div>
-        <label for="a_name">name:</label><br>
-        <input type="text" id="a_name" name="a_name"><br>
-        <label for="a_email">email:</label><br>
-        <input type="text" id="a_email" name="a_email"><br>
-
+        <div id="form">
 
         <button id="submitButton" type="submit" return false;>create employee</button>
         </br>
