--- a/allEmployees.html
+++ b/allEmployees.html
@@ -9,12 +9,11 @@
 <body>
     <div>
         <div id="form">
-
-        <button id="submitButton" type="submit" return false;>create employee</button>
-        </br>
-        <div id="allEmployees"></div>
-
-    </div>
+            <div id="form_fields"></div>
+            <button id="submitButton" type="submit" return false;>create employee</button>
+            </br>
+            <div id="allEmployees"></div>
+        </div>
 
     <a class="button" href="app.html">home</a>
     <script type="module" src="Employee.js"></script>
