--- a/app.html
+++ b/app.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a class="button" href="allEmployees.html" >All Employees</a>
+    <h1 id ="clock_label">The time is: </h1>
+    <div id="clock"></div>
+    <a class="button" href="allEmployees.html">All Employees</a>
+    <script type="module" src="Clock.js"></script>
 
 </body>
 </html>
